Fixed overlap issue
Changed rows to floats to prevent row overlap when dealing with odd
grid sizes causing rounding issues (like 7).

--- a/styles/style.css
+++ b/styles/style.css
@@ -4,16 +4,16 @@
   height: 500px;
   margin-left: auto;
   margin-right: auto;
-  border: 1px solid orange;
-
 }
 
 .gridcell{
   display: inline-block;
   height: 100%;
-  outline: 1px solid black;
+  outline: 1px solid #949494;
 }
 
 .gridrow{
+  float:left;
   width:100%;
+  white-space: nowrap;
 }
